--- a/index.html
+++ b/index.html
@@ -6,11 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simon says</title>
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container text-center">
+        <h1 class="my-3">Simon says</h1>
+        <div id="intro">
+            <p>Cliccando il pulsante compariranno 5 numeri. Hai 30 secondi per memorizzarli.</p>
+            <button class="px-3 go">Via</button>
+        </div>
+
+        <ul class="my-3 list">
+            <input type="number" name="number1">
+            <input type="number" name="number2">
+            <input type="number" name="number3">
+            <input type="number" name="number4">
+            <input type="number" name="number5">
+        </ul>
 
 
+
+
+
+
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
