--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="my-3 list list-unstyled">
 
         </ul>
-        <form class="labelsform">
+        <form class="labelsform my-3">
 
             <label for="number1">Numero 1</label>
             <input type="number" name="number1" id="number1" min="1" max="100">    
